<resources>
    <string name="app_name">EventManagement</string>
    <string name="events">Events</string>
    <string name="buy_tickets">Buy tickets</string>
    <string name="anonymous_user">Anonymous user</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="datum">24.06.2022 – 26.6.2022</string>
    <string name="eventname">EventName</string>
    <string name="lokacija">Arena Zagreb, Zagreb</string>
    <string name="comment">Your comment about the event:</string>
    <string name="name">Name:</string>
    <string name="leave_a_comment">Leave a comment</string>
    <string name="leave_a_comment_modal">Leave a comment!</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="leave_comment">Comment…</string>
    <string name="send_comment">Send comment</string>
    <string name="cancel">Cancel</string>
    <string name="checkout">Checkout</string>
    <string name="full_name">Full name:</string>
    <string name="email">Email:</string>
    <string name="card_number">Card number:</string>
    <string name="date_of_expiration">Date of expiration:</string>
    <string name="ccv">CCV:</string>
    <string name="_200_00_kn">200.00 kn</string>
    <string name="_1x_severina">1x Severina</string>
    <string name="input_your_name">Input your name</string>
    <string name="card_holder_name">Card holder name:</string>
    <string name="card_holder_surname">Card holder surname:</string>
    <string name="address">Address:</string>
    <string name="zip_code">Zip Code:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="credit_card_information">Credit card information:</string>
    <string name="credit_card_holder_information">Credit card holder information:</string>
    <string name="pick_a_date">Pick a date</string>
    <string name="i_agree_with">I agree with the</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="i_agree">I agree</string>
    <string name="i_disagree">I disagree</string>
</resources>