<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvTerms"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_conditions"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWholeTerms"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lorem_ipsum"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTerms" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIAgree"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="@dimen/marginEverything"
            android:text="@string/i_agree"
            android:textAllCaps="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWholeTerms" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIDisagree"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/marginEverything"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/i_disagree"
            android:textAllCaps="false"
            app:layout_constraintStart_toEndOf="@id/btnIAgree"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvWholeTerms" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>