<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.EventDetailsFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpEventDetailsImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.tbuonomo.viewpagerdotsindicator.WormDotsIndicator
            android:id="@+id/diDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:translationZ="1dp"
            app:dotsSize="10dp"
            app:dotsSpacing="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vpEventDetailsImage" />

        <TextView
            android:id="@+id/tvEventDetailsName"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/eventname"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vpEventDetailsImage" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_date"
            app:layout_constraintEnd_toStartOf="@id/tvDateDetails"
            app:layout_constraintTop_toBottomOf="@id/vpEventDetailsImage" />

        <TextView
            android:id="@+id/tvDateDetails"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:text="@string/datum"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/vpEventDetailsImage" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_location"
            app:layout_constraintEnd_toStartOf="@id/tvLocationDetails"
            app:layout_constraintTop_toBottomOf="@id/tvEventDetailsName" />

        <TextView
            android:id="@+id/tvLocationDetails"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEventDetailsName"
            tools:text="@string/lokacija" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvComments"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/rvComments"
            app:layout_constraintTop_toBottomOf="@id/mbtnComment" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtnComment"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/marginEverything"
            android:text="@string/leave_a_comment"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="11sp"
            app:cornerRadius="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocationDetails" />

        <Spinner
            android:id="@+id/spinnerTicketType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvComments" />

        <Spinner
            android:id="@+id/spinnerNumberOfTickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="13dp"
            app:layout_constraintStart_toEndOf="@id/spinnerTicketType"
            app:layout_constraintTop_toBottomOf="@id/rvComments" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBuyTicket"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:text="@string/buy_tickets"
            android:textAllCaps="false"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerTicketType" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
